# ChatApplication

ChatApplication/: CMakeLists.txt
ChatApplication/ChatApplicationApp/: main.cpp
ChatApplication/ChatApplicationApp/UI/: main.qml  qml.qrc
ChatApplication/ChatApplicationApp/UI/Screens/: HomeScreen.qml  HomeScreen.qml.autosave  LoginScreen.qml
ChatApplication/ChatApplicationComponents/: CMakeLists.txt
